Update personal description in About section of portfolio

--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
                     </p>
                     <p class="text-gray-700 leading-relaxed">
                         Descobri minha verdadeira paixão pelo UX/UI Design durante meu período de um ano e 
-                        meio na Citi Empresa Júnior. É fora da caixa, vocês pode me encontrar criando, jogando, 
-                        explorando cantinhos da rua ou, invariavelmente, comendo pela cidade.
+                        meio na Citi Empresa Júnior. E fora do trabalho, você pode me encontrar na natação, explorando feirinhas de rua ou, invariavelmente, comendo pela cidade.
                     </p>
                 </div>
 
